--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -40,6 +40,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
             <!--<plugin>-->
                 <!--<groupId>com.spotify</groupId>-->
                 <!--<artifactId>docker-maven-plugin</artifactId>-->
@@ -69,5 +70,6 @@
                 <!--</configuration>-->
             <!--</plugin>-->
         </plugins>
+        <defaultGoal>compile</defaultGoal>
     </build>
 </project>
