--- a/mall-portal/pom.xml
+++ b/mall-portal/pom.xml
@@ -78,6 +78,7 @@
                 <!--</configuration>-->
             <!--</plugin>-->
         </plugins>
+        <defaultGoal>compile</defaultGoal>
     </build>
 
 
