--- a/mall-search/pom.xml
+++ b/mall-search/pom.xml
@@ -63,6 +63,7 @@
                 <!--</configuration>-->
             <!--</plugin>-->
         </plugins>
+        <defaultGoal>compile</defaultGoal>
     </build>
 
 </project>
