--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -34,19 +34,19 @@
             <artifactId>logstash-logback-encoder</artifactId>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--    <build>-->
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>repackage</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 
             <!--<plugin>-->
                 <!--<groupId>com.spotify</groupId>-->
@@ -76,7 +76,7 @@
                     <!--</resources>-->
                 <!--</configuration>-->
             <!--</plugin>-->
-        </plugins>
-        <defaultGoal>compile</defaultGoal>
-    </build>
+<!--        </plugins>-->
+<!--        <defaultGoal>compile</defaultGoal>-->
+<!--    </build>-->
 </project>
