--- a/mall-portal/pom.xml
+++ b/mall-portal/pom.xml
@@ -43,19 +43,19 @@
         </dependency>
     </dependencies>
 
-<!--    <build>-->
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>repackage</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!--<plugin>-->
                 <!--<groupId>com.spotify</groupId>-->
                 <!--<artifactId>docker-maven-plugin</artifactId>-->
@@ -84,9 +84,8 @@
                     <!--</resources>-->
                 <!--</configuration>-->
 <!--            &lt;!&ndash;</plugin>&ndash;&gt;-->
-<!--        </plugins>-->
-<!--        <defaultGoal>compile</defaultGoal>-->
-<!--    </build>-->
+        </plugins>
+    </build>
 
 
 </project>
