--- a/mall-search/pom.xml
+++ b/mall-search/pom.xml
@@ -28,12 +28,19 @@
         </dependency>
     </dependencies>
 
-<!--    <build>-->
-<!--        <plugins>-->
-<!--            <plugin>-->
-<!--                <groupId>org.springframework.boot</groupId>-->
-<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
-<!--            </plugin>-->
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
             <!--<plugin>-->
                 <!--<groupId>com.spotify</groupId>-->
                 <!--<artifactId>docker-maven-plugin</artifactId>-->
@@ -62,8 +69,8 @@
                     <!--</resources>-->
                 <!--</configuration>-->
             <!--</plugin>-->
-<!--        </plugins>-->
-<!--        <defaultGoal>compile</defaultGoal>-->
-<!--    </build>-->
+        </plugins>
+        <defaultGoal>compile</defaultGoal>
+    </build>
 
 </project>
