--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -35,18 +35,18 @@
         </dependency>
     </dependencies>
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
+<!--        <plugins>-->
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--                <executions>-->
+<!--                    <execution>-->
+<!--                        <goals>-->
+<!--                            <goal>repackage</goal>-->
+<!--                        </goals>-->
+<!--                    </execution>-->
+<!--                </executions>-->
+<!--            </plugin>-->
 
             <!--<plugin>-->
                 <!--<groupId>com.spotify</groupId>-->
@@ -76,7 +76,7 @@
                     <!--</resources>-->
                 <!--</configuration>-->
             <!--</plugin>-->
-        </plugins>
-
+<!--        </plugins>-->
+        <defaultGoal>compile</defaultGoal>
     </build>
 </project>
